frontend/bowtie/src/components/gamelist/layout.scss
@import "../../style.scss";

.layout-lists {
  margin-top: $header-size;
  white-space: nowrap;
  margin-left: 20px;
}

@media only screen and (max-width: 600px) {
  .layout-lists {
    margin-left: 0px;
  }
}

.addnew-list-card{
  display: inline-block;
  white-space: nowrap;
  min-width: 350px;
  margin-left: 20px;

}
.lists-wrapper{
  display: flex;
}

.layout-wrapper{
  .visibility-visible{
    position: static;
  }
  .visibility-hidden{
    position: absolute;
    top: -999999px;
  }
}

